Fourth Commit : Tweaked the layout a bit , fixed spacing, made things look cleaner, and adjusted some small details

--- a/Style.css
+++ b/Style.css
@@ -13,16 +13,17 @@ html {
 /* Set base font size and line height */
 body {
   font: 1.2em / 1.5 system-ui;
-  padding: 20px;        /* add padding around content */
-  width: 500px;          /* fixed width for the page */
-  background-color: #efefef; /* light gray background */
-  margin: 0 auto;        /* center body horizontally */
+  padding: 20px;
+  width: 500px;
+  background-color: #efefef;
+  margin: 0 auto;
 }
 
 h1 {
   color: darkslategray;
   font-size: 2rem;
   border-bottom: 10px dotted purple;
+  padding-bottom: 5px;/
 }
 
 h2 {
@@ -33,6 +34,7 @@ h2 {
 .job-title {
   color: darkslategray;
   font-weight: bold;
+  margin-bottom: 20px; 
 }
 
 ul {
@@ -40,10 +42,12 @@ ul {
   border: 5px solid purple;
   padding: 30px;
   border-radius: 20px;
+  list-style-type: none; 
 }
 
 a {
   color: green;
+  text-decoration: underline;
 }
 
 a:hover,
